Makes edits to the table

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -768,18 +768,18 @@
     "\n",
     "| Feature | Feature count (per sample) | Final Model |\n",
     "| --- | --- | --- |\n",
-    "| Coorelation Coefficient (raw data) | 2 (highest 2) | X |\n",
-    "| Coorelation Coefficient (band power) | 2 (highest 2 | X |\n",
-    "| AutoCorrelation First Coefficient | 6 (1 per band) | X |\n",
-    "| AutoCorrelation Sum of 10 Coefficient | 6 (1 per band) | X |\n",
-    "| AutoCorrelation Sum of 10 squared Coefficient | 6 (1 per band) | -- |\n",
+    "| Correlation Coefficient (raw data) | 2 (highest 2) | X |\n",
+    "| Correlation Coefficient (band power) | 2 (highest 2 | X |\n",
+    "| Autoregressive (AR) First Coefficient | 6 (1 per band) | X |\n",
+    "| Autoregressive (AR) Sum of the First 10 Coefficients | 6 (1 per band) | X |\n",
+    "| Autoregressive (AR) Sum of the First 10 Coefficients Squared | 6 (1 per band) | -- |\n",
     "| Mean band power | 6 (1 per band) | X |\n",
     "| IQR band power | 6 (1 per band) | X |\n",
     "| Standard Deviation band power | 6 (1 per band) | X |\n",
     "| Mean Absolute Deviation band power | 6 (1 per band) | X |\n",
     "| Hjorth Complexity (max and mean) | 2 | X |\n",
     "| Hjorth Mobility (max and mean) | 2 | X |\n",
-    "| Hjorth Activation (max and mean) | 2 | -- |"
+    "| Hjorth Activity (max and mean) | 2 | -- |"
    ]
   }
  ],
