--- a/Training.ipynb
+++ b/Training.ipynb
@@ -770,9 +770,9 @@
     "| --- | --- | --- |\n",
     "| Correlation Coefficient (raw data) | 2 (highest 2) | X |\n",
     "| Correlation Coefficient (band power) | 2 (highest 2 | X |\n",
-    "| Autoregressive (AR) First Coefficient | 6 (1 per band) | X |\n",
-    "| Autoregressive (AR) Sum of the First 10 Coefficients | 6 (1 per band) | X |\n",
-    "| Autoregressive (AR) Sum of the First 10 Coefficients Squared | 6 (1 per band) | -- |\n",
+    "| Autocorrelation Function (AR) First Coefficient | 6 (1 per band) | X |\n",
+    "| Autocorrelation Function (AR) Sum of the First 10 Coefficients | 6 (1 per band) | X |\n",
+    "| Autocorrelation Function (AR) Sum of the First 10 Coefficients Squared | 6 (1 per band) | -- |\n",
     "| Mean band power | 6 (1 per band) | X |\n",
     "| IQR band power | 6 (1 per band) | X |\n",
     "| Standard Deviation band power | 6 (1 per band) | X |\n",
